# examples_dummy_robot1

./: README.md
dummy_robot1/: .gitignore  CMakeLists.txt  package.xml
dummy_robot1/launch/: bringup.launch
dummy_robot1/scripts/: begin.rive  simple_reply.rive
nao_v5/: CMakeLists.txt  package.xml
nao_v5/config/: percep_conf_loud_sound_detection.yaml  percep_conf_touch_sensor.yaml
nao_v5/launch/: bringup.launch  bringup_mhri.launch  bringup_nao.launch
nao_v5/scripts/: nao_brain.rive
nao_v5/src/: behavior_idle_motion.py  render_expression.py  render_gaze.py  render_gesture.py  render_speech.py  sensory_percep_hand_touch_detector.py  sensory_percep_loud_sound_detector.py  social_percep_loud_sound_detector.py  social_percep_touch_sensor.py
