<?xml version="1.0"?>
<package>
  <name>dummy_robot1</name>
  <version>0.0.0</version>
  <description>The dummy_robot1 package</description>

  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>

  <license>BSD</license>
  <url type="website">https://github.com/mhri/mhri/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mhri</build_depend>
  <run_depend>mhri</run_depend>

  <export>
  </export>
</package>
